# E-commerce_ess

./: .gitignore  Menugeral.feature  Pedidos.feature  README.md  Usuario.feature  package-lock.json  package.json  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: 1291b7b7903c_mensagem.py  2c9391c4f3bc_versão_final_do_banco.py  69e120cd2870_criando_modelo_completo.py  a3dbe3fd3963_alternado_o_tamanho_da_coluna_senha.py  ac892b9eb2e4_dan.py  bbf748d9b646_versão_final_do_banco.py  c7aa6a0ac7d8_banco_com_estoque_apontando_loja.py  d0e1a4b6deee_criando_entidades_usuario_endereco_e_.py
api/: conftest.py  index.py
app/: layout.tsx  page.tsx
app/(auth)/: layout.tsx
components/: NavBar.tsx  SearchBar.tsx
components/cart/: cartPage.tsx
components/dropdownmenu/: DropDownMenuConfigUser.tsx  DropDownMenuCreateUser.tsx  DropDownMenuProduto.tsx
components/form/: SignInForm.tsx  SignUpFormClient.tsx  SignUpFormLoja.tsx
components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx
database/: auth.py  get_db.py
database/crud/: crud.py
database/models/: modelos.py
database/shemas/: schemas.py
features/: ExcluirProduto.feature  Menugeral2.feature  Menugeral3.feature  UpdateProduto.feature  autenticacao.feature  cancelando_erro.feature  cancelar_pedido.feature  carrinho_de_compras.feature  carrinho_de_compras.features  createClient.feature  createClientErro.feature  loginClient.feature  pedidos.feature
features/steps/: CancelandoErroSteps.py  CancelandoSteps.py  ExcluirProdutoSteps.py  LoginClienteSteps.py  PedidoSteps.py  (+8 more)
models/: modelos.py
(+32 files in other folders)
